[project]
name = "beyond_fa_infonce"
version = "0.0.5"
description = "Beyond-FA Challenge using InfoNCE for Tensor Metric"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Core
    "torch>=2.3.0",
    "torchio>=0.18",
    "numpy>=1.24",
    "nibabel>=5.2",

    # Medical-DWI tools
    "simpleitk>=2.4.1",
]